--- a/EF/EFCoreExamples/Batching/2_Batching.csproj
+++ b/EF/EFCoreExamples/Batching/2_Batching.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <RootNamespace>Batching</RootNamespace>
+    <AssemblyName>Batching</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.0" />
