--- a/EF/EFCoreExamples/Concurrency/5_Concurrency.csproj
+++ b/EF/EFCoreExamples/Concurrency/5_Concurrency.csproj
@@ -3,10 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <RootNamespace>FieldMapping</RootNamespace>
-    <AssemblyName>FieldMapping</AssemblyName>
+    <RootNamespace>Concurrency</RootNamespace>
+    <AssemblyName>Concurrency</AssemblyName>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="1.1.0" />
