--- a/EF/EFCoreExamples/MixedEvaluation/6_MixedEvaluation.csproj
+++ b/EF/EFCoreExamples/MixedEvaluation/6_MixedEvaluation.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <AssemblyName>MixedEvaluation</AssemblyName>
+    <RootNamespace>MixedEvaluation</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.0" />
