--- a/Patterns/BehavioralPatternsTests/BehavioralPatternsTests.csproj
+++ b/Patterns/BehavioralPatternsTests/BehavioralPatternsTests.csproj
@@ -34,6 +34,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.1.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.1.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Moq, Version=4.7.25.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.25\lib\net45\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,16 +63,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\CommandTests.cs" />
+    <Compile Include="Memento\MementoTests.cs" />
+    <Compile Include="Observer\A1_WeakReferences\WeakReferencesTests.cs" />
+    <Compile Include="Observer\A_FromScratch\ObserverFromScratchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Strategy\A_StrategyTests.cs" />
+    <Compile Include="Strategy\StrategyTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Memento\" />
-    <Folder Include="Observer\" />
-    <Folder Include="TemplateMethod\" />
+    <Folder Include="Observer\C_Framework\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BehavioralPatterns\BehavioralPatterns.csproj">
