--- a/Patterns/Structural/StructuralPatterns.csproj
+++ b/Patterns/Structural/StructuralPatterns.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{926E952C-89EB-48BD-8262-736D70F1F0FB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Structural</RootNamespace>
-    <AssemblyName>Structural</AssemblyName>
+    <RootNamespace>StructuralPatterns</RootNamespace>
+    <AssemblyName>StructuralPatterns</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
