--- a/UnitTesting/UnitTestingExamples/XUnitTestProject/XUnitTestProject.csproj
+++ b/UnitTesting/UnitTestingExamples/XUnitTestProject/XUnitTestProject.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="A_Basics\E_CalculatorTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="Moq" Version="4.7.25" />
     <PackageReference Include="xunit" Version="2.2.0" />
