--- a/DOTNETCORE/EFCoreSamples/GlobalQueryFilters/09_GlobalQueryFilters.csproj
+++ b/DOTNETCORE/EFCoreSamples/GlobalQueryFilters/09_GlobalQueryFilters.csproj
@@ -1,10 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>MixedEvaluation</AssemblyName>
-    <RootNamespace>MixedEvaluation</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0-preview1-final" />
