working on the api versioning examples

--- a/DOTNETCORE/ASP.NET Core/2.1/SpyStore_v21/SpyStoreModels/SpyStoreModels.csproj
+++ b/DOTNETCORE/ASP.NET Core/2.1/SpyStore_v21/SpyStoreModels/SpyStoreModels.csproj
@@ -10,8 +10,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.0-preview1-final" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
