Corrected the 2.1 examples for RTM

--- a/DOTNETCORE/ASP.NET Core/2.1/SpyStore_v21/SpyStore_v21/SpyStore_v21.csproj
+++ b/DOTNETCORE/ASP.NET Core/2.1/SpyStore_v21/SpyStore_v21/SpyStore_v21.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>aspnet-SpyStore_v21-A330B877-E01A-4514-B59B-BCD5BD2A97D7</UserSecretsId>
-    <TrimUnusedDependencies>True</TrimUnusedDependencies>
+    <!--<TrimUnusedDependencies>True</TrimUnusedDependencies>-->
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -13,20 +13,15 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.0" />
-    <PackageReference Include="BuildBundlerMinifier-Typescript" Version="2.1.258" />
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.215" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <!--<PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.1.0" />-->
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="2.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" PrivateAssets="All" />
   </ItemGroup>
 
-  <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.1.0-preview1-final" />
-    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.1.0-preview1-final" />
-  </ItemGroup>
+  <!--<ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.1.0" />
+  </ItemGroup>-->
 
   <ItemGroup>
     <ProjectReference Include="..\SpyStoreDAL\SpyStoreDAL.csproj" />
