--- a/DOTNETCORE/EFCoreSamples/ChangeTrackingEvents/13_ChangeTrackingEvents.csproj
+++ b/DOTNETCORE/EFCoreSamples/ChangeTrackingEvents/13_ChangeTrackingEvents.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>ConnectionResiliency</RootNamespace>
-    <AssemblyName>ConnectionResiliency</AssemblyName>
+    <RootNamespace>ChangeTrackingEvents</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
