--- a/Patterns/CreationalPatternsTests/packages.config
+++ b/Patterns/CreationalPatternsTests/packages.config
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.2.0" targetFramework="net47" />
-  <package id="Moq" version="4.7.127" targetFramework="net47" />
-  <package id="xunit" version="2.2.0" targetFramework="net47" />
-  <package id="xunit.abstractions" version="2.0.1" targetFramework="net47" />
-  <package id="xunit.assert" version="2.2.0" targetFramework="net47" />
-  <package id="xunit.core" version="2.2.0" targetFramework="net47" />
-  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net47" />
-  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net47" />
-  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net47" />
+  <package id="Moq" version="4.10.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net47" />
+  <package id="xunit" version="2.4.0" targetFramework="net47" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="net47" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net47" />
+  <package id="xunit.assert" version="2.4.0" targetFramework="net47" />
+  <package id="xunit.core" version="2.4.0" targetFramework="net47" />
+  <package id="xunit.extensibility.core" version="2.4.0" targetFramework="net47" />
+  <package id="xunit.extensibility.execution" version="2.4.0" targetFramework="net47" />
+  <package id="xunit.runner.visualstudio" version="2.4.0" targetFramework="net47" developmentDependency="true" />
 </packages>
