--- a/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp73/WhatsNewInCSharp73.csproj
+++ b/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp73/WhatsNewInCSharp73.csproj
@@ -11,6 +11,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <LangVersion>7.3</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
