--- a/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp8/WhatsNewInCSharp8.csproj
+++ b/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp8/WhatsNewInCSharp8.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <NullableReferenceTypes>true</NullableReferenceTypes>
   </PropertyGroup>
-
 </Project>
