UPDATED NuGet & Framework

--- a/EF6_Top_Ten/DALTests/app.config
+++ b/EF6_Top_Ten/DALTests/app.config
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="StoreContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=DAL.EF.StoreContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="StoreContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=DAL.EF.StoreContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <!--<interceptors>
@@ -17,35 +18,44 @@
       </interceptor>
       <interceptor type="DAL.EF.LoggingInterceptor, DAL"></interceptor>
     </interceptors>-->
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="rolling-log.txt"/>
-      <appendToFile value="true"/>
-      <maxSizeRollBackups value="5"/>
-      <maximumFileSize value="1000KB"/>
-      <rollingStyle value="Size"/>
-      <staticLogFileName value="true"/>
+      <file value="rolling-log.txt" />
+      <appendToFile value="true" />
+      <maxSizeRollBackups value="5" />
+      <maximumFileSize value="1000KB" />
+      <rollingStyle value="Size" />
+      <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[Header]
-"/>
-        <footer value="[Footer]
-"/>
-        <conversionPattern value="%date %-5level %logger %identity File:&lt;%property{FilePath}&gt; Method:&lt;%property{MemberName}&gt; Line:&lt;%property{LineNumber}&gt;  - %message%newline %stacktrace{5}%newline"/>
+        <header value="[Header] " />
+        <footer value="[Footer] " />
+        <conversionPattern value="%date %-5level %logger %identity File:&lt;%property{FilePath}&gt; Method:&lt;%property{MemberName}&gt; Line:&lt;%property{LineNumber}&gt;  - %message%newline %stacktrace{5}%newline" />
       </layout>
     </appender>
     <root>
       <appender-ref ref="RollingLogFileAppender">
-        <threshold value="Info"/>
+        <threshold value="Info" />
       </appender-ref>
     </root>
   </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.6.4.14350" newVersion="2.6.4.14350"/>
+        <assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.4.14350" newVersion="2.6.4.14350" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+</configuration>
