UPDATED NuGet & Framework

--- a/UnitTesting/SpecFlowUnitTests/packages.config
+++ b/UnitTesting/SpecFlowUnitTests/packages.config
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
-  <package id="SpecFlow" version="2.4.0-preview20180718" targetFramework="net472" />
-  <package id="NUnit" version="3.10.1" targetFramework="net472" />
-  <package id="SpecFlow.NUnit" version="2.4.0-preview20180718" targetFramework="net472" />
-  <package id="SpecFlow.NUnit.Runners" version="2.4.0-preview20180718" targetFramework="net472" />
-  <package id="SpecRun.Runner" version="1.8.0-rc003" targetFramework="net472" />
-  <package id="SpecRun.SpecFlow" version="1.8.0-rc003" targetFramework="net472" />
-  <package id="SpecRun.SpecFlow.2-3-0" version="1.8.0-rc003" targetFramework="net472" />
-  <package id="SpecRun.SpecFlow.2-4-0" version="1.8.0-rc003" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
+  <package id="NUnit" version="3.11.0" targetFramework="net472" />
+  <package id="NUnit.Console" version="3.9.0" targetFramework="net472" />
+  <package id="NUnit.ConsoleRunner" version="3.9.0" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.7.0" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net472" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.5" targetFramework="net472" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net472" />
+  <package id="SpecFlow" version="2.4.1" targetFramework="net472" />
+  <package id="SpecFlow.NUnit" version="2.4.1" targetFramework="net472" />
+  <package id="SpecFlow.NUnit.Runners" version="2.4.1" targetFramework="net472" />
+  <package id="SpecRun.Runner" version="1.8.5" targetFramework="net472" />
+  <package id="SpecRun.SpecFlow" version="1.8.5" targetFramework="net472" />
+  <package id="SpecRun.SpecFlow.2-4-0" version="1.8.5" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
